# staking-dapp

./: .gitignore  Anchor.toml  Readme.md  package-lock.json  package.json
app/: .env  .env.local  README.md  layout.tsx  next.config.js  package-lock.json  package.json  page.tsx  tsconfig.json
app/dashboard/: page.tsx
app/level/: page.tsx
app/meme/: page.tsx
app/referral/: page.tsx
app/reward/: page.tsx
app/src/: App.tsx
app/src/api/: auth.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/auth/: page.tsx
app/src/app/dashboard/: page.tsx
app/src/app/level/: page.tsx
app/src/app/meme/: page.tsx
app/src/app/referral/: page.tsx
app/src/components/: Dapp  LevelGuide.tsx  Navbar.tsx  Notification.tsx  ReferralPanel.tsx  ReferralSystem.tsx  RewardsPanel.tsx  StakingDapp.tsx  StakingPackage.tsx  StatsCard.tsx  UserInfoCard.tsx  WalletConnectSection.tsx  WalletNotConnected.tsx  dappa
app/src/lib/: config.ts  idl.json  idl.ts  old  staking-client.ts  staking-client.tsx  staking_program.json  types.ts  useStaking.tsx  useWallet.tsx
app/src/pages/: DashboardPage.tsx
app/src/styles/: global.css  globals.css
app/src/types/: authTypes.ts  index.ts
app/src/utils/: format.ts  validation.ts  wallet.ts
app/stake/: page.tsx
programs/staking-dapp/: Cargo.toml
programs/staking-dapp/src/: errors.rs  lib.rs  states.rs  status_enum.rs
programs/staking-dapp/src/instructions/: auto_release.rs  create_package.rs  create_user.rs  exit_package.rs  initialize.rs  mod.rs  stake.rs  update_referral.rs
tests/: staking-dapp.ts
(+14 files in other folders)
